test/secondPage.h
#ifndef SECOND_PAGE_H
#define SECOND_PAGE_H

extern hd44780_I2Cexp lcd;      // i thought this might help declare the lcd object
                                // error: 'hd44780_I2Cexp' does not name a type

void badFunc(void);

#endif